0.5.0/_sources/user_guide.rst.txt
.. _user_guide:

==========
User Guide
==========

.. toctree::
   :glob:
   :hidden:

   quickstart
   concepts
   diffractometers
   examples
   guides
   faq
   install
   glossary

.. icons: https://fonts.google.com/icons

.. grid:: 2

    .. grid-item-card:: :material-outlined:`directions_run;3em` :ref:`user_guide.quickstart`
    .. grid-item-card:: :material-outlined:`architecture;3em` :ref:`concepts`
    .. grid-item-card:: :material-outlined:`format_list_bulleted;3em` :ref:`geometries`
    .. grid-item-card:: :material-outlined:`preview;3em` :ref:`examples`
    .. grid-item-card:: :material-outlined:`school;3em` :ref:`guides`
    .. grid-item-card:: :material-outlined:`question_mark;3em` :ref:`FAQ`
    .. grid-item-card:: :material-regular:`install_desktop;3em` :ref:`install`
    .. grid-item-card:: :material-outlined:`list;3em` :ref:`glossary`
    .. grid-item-card:: :material-regular:`menu_book;3em` `Full API Reference <autoapi/hklpy2/index.html>`_

      Complete, auto-generated reference for every public module, class,
      function, and constant in *hklpy2*.
